fixes on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ button:focus {
     font: inherit;
   }
   .container {
-    padding: 1.2rem;
+    padding: .5rem !important;
   }
 
   h1 {
